# soccer-table-haskell

./: CHANGELOG.md  LICENSE  README.md  TODO.md  cabal.project.freeze  soccer-table.cabal
app/: Main.hs
src/: Formatting.hs  Misc.hs  SoccerTable.hs
test/: FormattingSpec.hs  Main.hs  SoccerTableSpec.hs  Spec.hs
